# MLEM

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  test.py  walkthrough.ipynb
MLEM/: MLEM.py  __init__.py  base_class.py  distance_class.py  plotting_class.py  recording_class.py  regression_class.py
datasets/: large.csv  long_range_agreement.csv  relative_clause.csv  short_sentence.csv
docs/: conf.py  index.rst  requirements.txt
docs/MLEM/: MLEM.rst  base_class.rst  distance_class.rst  plotting_class.rst  recording_class.rst  regression_class.rst
experiments/short_sentence/bert-base-uncased/spe_tok/: config.json
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_1/: decoding_baseline.csv
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_10/: decoding_baseline.csv
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_11/: config.json  decoding_baseline.csv  mds_matrix.npz
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_12/: decoding_baseline.csv
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_2/: decoding_baseline.csv
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_3/: decoding_baseline.csv
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_4/: decoding_baseline.csv
experiments/short_sentence/bert-base-uncased/spe_tok/analysis/first-token/euclidean/zscore_False/layer_5/: decoding_baseline.csv
mlem/: __init__.py  batch_size.py  compute_feature_importance.py  estimate_batch_size.py  feature_importance.py  mlem.py  model.py  pairwise_dataloader.py  spd_matrix_learner.py  trainer.py
mlem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stimulus_generators_NLMs/: README.md  stimuli_csv_generator.sh
stimulus_generators_NLMs/code/: grammar.py  grammar_lexicon.py  lexicon_English.py  stimulus_cleanup.py  stimulus_generator_from_CFG.py  utils.py
stimulus_generators_NLMs/code/grammar_rules/: clause_type.txt  long_range_agreement.txt  relative_clause.txt  short_sentence.txt
stimulus_generators_NLMs/stimuli/: check_balance.py
tests/: test_pairwise_dataloader.py  test_spd_matrix_learner.py
(+316 files in other folders)
