[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlem"
version = "0.1.0"
authors = [
  { name="Louis Jalouzot", email="jalouzot.louis@gmail.com" },
]
description = "Implementation of MLEM."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "fast-soft-sort @ git+https://github.com/LouisJalouzot/fast-soft-sort.git",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "sympy>=1.2.0",
  "torch>=2.3.0",
  "tqdm>=4.27.0",
  "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/LouisJalouzot/MLEM"
"Repository" = "https://github.com/LouisJalouzot/MLEM"
"Bug Tracker" = "https://github.com/LouisJalouzot/MLEM/issues"