[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlem"
version = "0.1.0"
authors = [
  { name="Louis Jalouzot", email="jalouzot.louis@gmail.com" },
]
description = "Implementation of MLEM."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.9.0",
    "pandas>=1.0.0",
    "tqdm>=4.32.0",
    "torchsort>=0.1.10",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ipykernel",
    "ipywidgets",
]

[project.urls]
"Homepage" = "https://github.com/LouisJalouzot/MLEM_test"
