[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlem"
version = "0.1.0"
authors = [
  { name="Louis Jalouzot", email="jalouzot.louis@gmail.com" },
]
description = "Implementation of MLEM."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "torch>=1.9.0",
    "torchsort>=0.1.10",
    "tqdm>=4.27.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/LouisJalouzot/MLEM_test"
"Repository" = "https://github.com/LouisJalouzot/MLEM_test"
"Bug Tracker" = "https://github.com/LouisJalouzot/MLEM_test/issues"